<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_farmacias"
            android:icon="@drawable/ic_menu_pharmacy"
            android:title="@string/menu_farmacias" />
        <item
            android:id="@+id/nav_productos"
            android:icon="@drawable/ic_menu_mapa"
            android:title="@string/menu_mapa" />
        <item
            android:id="@+id/nav_carrito"
            android:icon="@drawable/ic_menu_productos"
            android:title="@string/menu_productos" />
        <item
            android:id="@+id/nav_mapa"
            android:icon="@drawable/ic_menu_carrito"
            android:title="@string/menu_carrito" />
    </group>

    <item android:title="Otros">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_logout"
                android:title="@string/menu_logout" />
        </menu>
    </item>

</menu>
