<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_farmacias">

    <fragment
        android:id="@+id/nav_farmacias"
        android:name="com.ugr.farmaciads.ui.farmacias.FarmaciasFragment"
        android:label="@string/menu_farmacias"
        tools:layout="@layout/fragment_farmacias" />

    <fragment
        android:id="@+id/nav_mapa"
        android:name="com.ugr.farmaciads.ui.carrito.CarritoFragment"
        android:label="@string/menu_carrito"
        tools:layout="@layout/fragment_carrito" />

    <fragment
        android:id="@+id/nav_productos"
        android:name="com.ugr.farmaciads.ui.mapa.MapaFragment"
        android:label="@string/menu_mapa"
        tools:layout="@layout/fragment_mapa" />

    <fragment
        android:id="@+id/nav_carrito"
        android:name="com.ugr.farmaciads.ui.productos.ProductosFragment"
        android:label="@string/menu_productos"
        tools:layout="@layout/fragment_productos" />

</navigation>